# data_mining_project

./: .gitignore  02_best_subset_selection.ipynb  Ensemble Tree Methods (R code) (finished).html  Ensemble Tree Methods (R code).html  Ensemble Tree Methods (R code).ipynb  Project (R code).html  Project (R code).ipynb  README.md  Subset, Stepwise, LASSO, Ridge (R code).ipynb  project.ipynb  pyproject.toml  report.html
