[project]
name = ""
version = ""
description = ""
authors = [
    {name = "harrisdurrani", email = "harris.durrani@hotmail.com"},
]
dependencies = [
    "ucimlrepo>=0.0.7",
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

